<resources>
    <string name="app_name">Rubber Necker</string>
    <string name="video_choice_btn_txt">Video</string>
    <string name="drone_controller_btn_txt">Drone Controller</string>
    <string name="drone_select_text">Please select your drone</string>

    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="emergency_stop_btn_txt">Emergency Stop</string>
    <string name="down_btn_txt">Down</string>
    <string name="up_btn_txt">Up</string>
    <string name="flip_btn">Flip</string>
    <string name="take_off">Take Off</string>
    <string name="calibrate_btn_txt">Calibrate</string>
</resources>
