<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.jzheadley.droneproject.ui.MainActivity"
    android:background="#646464">



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight=".08"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/videoBtn"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:layout_weight=".20"
        android:background="@xml/button_round"
        android:text="@string/video_choice_btn_txt"
        android:textColor="#333333"
        android:textSize="40sp" />

    <Button
        android:id="@+id/controllerBtn"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight=".20"
        android:background="@xml/button_round"
        android:padding="5dp"
        android:text="@string/drone_controller_btn_txt"
        android:textColor="#333333"
        android:textSize="40sp" />

</LinearLayout>
