<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@xml/gradient"
    android:orientation="horizontal"
    tools:context="com.jzheadley.droneproject.ui.ControllerDebugActivity">

    <TextView
        android:id="@+id/debug_controller_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/calibrate_drone_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@xml/button"
            android:drawableTop="@drawable/ic_calibrate"
            android:paddingTop="30dp"
            android:text="@string/calibrate_btn_txt"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/drone_emergency_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1.2"
            android:background="@xml/button_red"
            android:padding="5dp"
            android:text="@string/emergency_stop_btn_txt"
            android:textSize="13sp" />

        <Button
            android:id="@+id/flip_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@xml/button"
            android:text="@string/flip_btn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:drawableTop="@drawable/ic_flip"
            android:paddingTop="30dp"/>

        <Button
            android:id="@+id/drone_takeoff_land_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@xml/button"
            android:text="@string/take_off"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:drawableTop="@drawable/ic_rocket"
            android:paddingTop="30dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/drone_up_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@xml/up_button" />

        <Button
            android:id="@+id/drone_down_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@xml/down_button" />

    </LinearLayout>


</LinearLayout>
